src/main/antlr4/nl/han/ica/icss/parser/ICSS.g4
grammar ICSS;

//--- LEXER: ---


OPEN_BRACE: '{';
CLOSE_BRACE: '}';
SEMICOLON: ';';
COLON: ':';
PLUS: '+';
MIN: '-';
MUL: '*';
ASSIGNMENT_OPERATOR: ':=';

//Literals
PIXELSIZE: [0-9]+ 'px';
PERCENTAGE: [0-9]+ '%';
SCALAR: [0-9]+;

//Color value takes precedence over id idents
COLOR: '#' [0-9a-f] [0-9a-f] [0-9a-f] [0-9a-f] [0-9a-f] [0-9a-f];

//Specific identifiers for id's and css classes
ID_IDENT: '#' [a-z0-9\-]+;
CLASS_IDENT: '.' [a-z0-9\-]+;

//General identifiers
LOWER_IDENT: [a-z] [a-z0-9\-]*;
CAPITAL_IDENT: [A-Z] [A-Za-z0-9_]*;

//All whitespace is skipped
WS: [ \t\r\n]+ -> skip;

//--- PARSER: ---

stylesheet: stylerule* EOF;
stylerule: selector OPEN_BRACE body CLOSE_BRACE | variableAssignment;
selector: LOWER_IDENT | ID_IDENT | CLASS_IDENT;
body: decleration+;
decleration: propertyName COLON expression SEMICOLON | stylerule | variableAssignment;
expression:  variableName | literal | expression multiply expression | expression operator expression;
literal: PIXELSIZE | PERCENTAGE | SCALAR | COLOR;
multiply: MUL;
operator: PLUS | MIN;

variableAssignment: variableName ASSIGNMENT_OPERATOR expression SEMICOLON;
variableName: CAPITAL_IDENT;
propertyName: LOWER_IDENT;
